aws-setup/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud-capstone-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: cloud-capstone-backend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: cloud-capstone-backend
    spec:
      containers:
        - name: cloud-capstone--backend-container
          image: public.ecr.aws/g4d6r5w8/cloud-capstone-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
