aws-setup/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud-capstone
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: cloud-capstone
  template:
    metadata:
      labels:
        app.kubernetes.io/name: cloud-capstone
    spec:
      containers:
        - name: cloud-capstone-container
          image: public.ecr.aws/g4d6r5w8/cloud-capstone:latest
          ports:
            - containerPort: 8080
