aws-setup/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: "cloud-capstone-backend-service"
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: cloud-capstone-backend
