aws-setup/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: "cloud-capstone-frontend-service"
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: cloud-capstone-frontend
