aws-setup/service.yml
apiVersion: v1
kind: Service
metadata:
  name: "cloud-capstone-service"
spec:
  ports:
    - port: 80
      targetPort: 4567
      protocol: TCP
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: cloud-capstone
