aws-setup/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "cloud-capstone-ingress"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/load-balancer-name: apg2
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: cloud-capstone
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: "cloud-capstone-service"
                port:
                  number: 80
